Fixed bug where some chunks where getting the wrong number of words, it was because some spaces were actually newlines or tabs and this getting ignored by the split(' ') function, so I replaced the space with a regex for all whitespace i.e. split(/\s+/). Also added styling to alternate blue/red coloring across consecutive chunks

--- a/style.css
+++ b/style.css
@@ -35,13 +35,12 @@ div#input {
 	padding-left: 4rem;
 }
 
-div#lorem {
+div#text-container {
 	width: 600px;
 	background-color: white;
 	line-height: 2rem;
 	padding: 4rem;
-	/* display: flex;
-	flex-flow: row wrap; */
+	line-height: 4rem;
 }
 
 form {
@@ -57,8 +56,10 @@ input {
 	font-size: 1.5rem;
 }
 
-span.chunk {
-	display: flex;
-	flex-flow: row wrap;
-	gap: 1ch;
+.blue {
+	color: blue;
+}
+
+.red {
+	color: red;
 }
